# langchain_kaltura

./: .env.example  .gitignore  MANIFEST.in  README.md  distribute.sh  example-kaltura.py  example-mivideo.py  example.py  kaltura_caption_loader.py  kaltura_captions.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
LangChainKaltura/: AbstractKalturaAPI.py  AbstractMediaPlatformAPI.py  KalturaAPI.py  KalturaCaptionLoader.py  MiVideoAPI.py  __init__.py  kaltura_caption_loader.py
LangChainKaltura/tests/: tests.py
LangChainKaltura/tests/fixtures/: caption_captionasset_getUrl.xml  session_startWidgetSession.xml
micro-proxy/: README.md  app.py
tests/: __main__.py  tests.py
tests/fixtures/: [English] The Victors - University of Michigan 2021 Commencement.srt  apptoken_startSession.xml  caption_captionasset_getUrl.xml  caption_captionasset_list.xml  media_list.xml  pinball_wizard.srt
