[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LangChainKaltura"
version = "0.0.1"
authors = [
    { name="Mr. Lance E Sloan", email="lsloan-github.com@umich.edu" },
]
description = "Collects captions from media in Kaltura and produces LangChain `Document` objects."
readme = "README.md"
requires-python = ">=3.11.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/umich-its-ai/langchain_kaltura"
Issues = "https://github.com/umich-its-ai/langchain_kaltura/issues"
